[tool.poetry]
name = "memleek"
version = "0.1.0"
description = "A memory usage analysis tool"
authors = ["Uriel Mandujano <uriel@prefect.io>"]
readme = "README.md"
packages = [{ include = "memleek" }]
keywords = ["memory", "memory leaks"]

[tool.poetry.dependencies]
python = "^3.8"
rich = "^13.5.3"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.290"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
